<resources>
    <string name="app_name">Hola travel</string>
    <string name="map_api" translatable="false">AIzaSyBZ8if6b2MJn25LYvfYYL5Egf37fUZzh04</string>
    <string name="notification_like">like your post</string>
    <string name="user_pass_not_correct">User name or password is not correct</string>
    <string name="regist_success">Sign up success</string>
    <string name="wellcome_1">Wellcome to Hola Travel</string>
    <string name="wellcome_2">Sign up to be our member!!</string>
    <string name="regist_confirm_false">Confirm password is not correct</string>
    <string name="regist_length_pass">Password must be more than 8 characters</string>
    <string name="regist_invalid">username invalid or already exist</string>
    <string name="name_unknow">Unknow</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="button_access">Access</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="noti">Notification</string>
    <string name="profile">Your profile</string>
    <string name="another_account">Another account</string>
    <string name="sign_out">Sign out</string>
    <string name="save">Save</string>
    <string name="pass">Password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit">Submit</string>
    <string name="upload">Upload your content</string>
    <string name="sign_in_upload">Sign in to upload your content</string>
    <string name="sign_in_see_posts">Sign in to see your posts</string>
    <string name="wait">Wait!!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="want_exit">Do you want to exit?</string>
    <string name="food">Food</string>
    <string name="hotel">Hotel</string>
    <string name="exp">Experience</string>
    <string name="community">Community</string>
    <string name="loading">Loading</string>
    <string name="username">Username</string>
    <string name="number_posts">Number of posts</string>
    <string name="title">Title</string>
    <string name="main_content">Main content</string>
    <string name="upload_2">Upload</string>
    <string name="add">What you want to add?</string>
    <string name="new_post">New post</string>
    <string name="max_img">Up to 5 photos</string>
    <string name="min_img">At least 1 photo</string>
    <string name="max_tag">Up to 3 tags</string>
    <string name="post_saved">Saved</string>
    <string name="un_save_exit">Your post have not already save, you really want to exit?</string>
    <string name="upload_success">Upload success</string>
    <string name="erro">Erro!</string>
    <string name="invalid_post">Your post invalid</string>
    <string name="min_char">Your post must at least 500 characters</string>
    <string name="already_tag">Have already tag</string>
    <string name="post_of">Posts of</string>
    <string name="update_success">Update successful</string>
    <string name="name_empty">Name can not be empty</string>
    <string name="pass_now_wrong">Old password not correct</string>
    <string name="change_pass">New password must be diffrent from old password</string>
    <string name="change_pass_success">Change password successful</string>
    <string name="noti_title">Notification</string>
    <string name="unread">Unread</string>
    <string name="seen">Seen</string>
    <string name="change_name">Change your name</string>
    <string name="new_name">New name</string>
    <string name="change_pass_title">Change pass</string>
    <string name="new_pass">New password</string>
    <string name="old_pass">Old password</string>
    <string name="sex">Sex</string>
    <string name="cmt">Comments</string>
    <string name="empty_user_pass">Username and password can not empty</string>
    <string name="like_type_2">liked your post</string>
    <string name="comment">Commented on your post</string>
    <string name="like_type_1">people liked your post</string>
    <string name="tag1">Food</string>
    <string name="tag2">Tips</string>
    <string name="tag3">" Experience"</string>
    <string name="tag4">Hotel</string>
    <string name="tag5">Da Lat</string>
    <string name="tag6">Vung Tau</string>
    <string name="tag7">Nha Trang</string>
    <string name="tag8">Phu Quoc</string>
<!--<<<<<<< HEAD-->
    <string name="create_name_location">Name of location</string>
    <string name="viet_nam">Viet Nam</string>
<!--=======-->
    <string name="my_post">My post</string>
<!--&gt;>>>>>> 4c76bbca77fb6ae104cae499a718536667acbdc9-->
</resources>