<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/icon_search"
        app:showAsAction="always"
        android:title="@string/search"
        ></item>
    <item
        android:title="@string/profile"
        android:icon="@drawable/icon_profile"
        app:showAsAction="always"
        android:id="@+id/menu_profile"
        ></item>
    <item
        android:id="@+id/menu_noti"
        android:title="@string/noti"
        android:icon="@drawable/icon_bell"
        app:showAsAction="always"
        ></item>
    <item
        android:id="@+id/menu_signout"
        android:title="@string/sign_out"
        ></item>
    <item
        android:id="@+id/menu_another"
        android:title="@string/another_account"
        ></item>
    <item
        android:id="@+id/menu_exit"
        android:title="@string/exit"
        ></item>

</menu>