<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/custom_dialog_radius"
    android:layout_margin="20dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/custom_top_dialog"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/edit_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Email"/>
        <EditText
            android:layout_marginBottom="20dp"
            android:id="@+id/edit_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pass"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#CCC8C8"
            android:layout_marginRight="20dp"
            android:text="@string/btn_cancel"/>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#0BA511"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:text="@string/btn_submit"/>
    </LinearLayout>
</LinearLayout>