<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_radius"
    android:layout_margin="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Giới tính"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:background="@drawable/custom_top_dialog"
        android:padding="10dp"
        ></TextView>
    <RadioGroup
        android:id="@+id/rdg"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <RadioButton
            android:id="@+id/rd_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20dp"
            ></RadioButton>
        <RadioButton
            android:id="@+id/rd_female"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20dp"
            ></RadioButton>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/btn_cancel"
            android:layout_gravity="center"
            android:background="#CCC8C8"
            android:textColor="@color/black"
            android:layout_marginRight="20dp"
            ></Button>
        <Button
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn_submit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/btn_submit"
            android:layout_gravity="center"
            android:background="#0BA511"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            ></Button>
    </LinearLayout>
</LinearLayout>