<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_type_3"
    tools:context=".HomeActivity">

    <HorizontalScrollView
        android:id="@+id/hScrollView"
        android:layout_marginTop="5dp"
        android:padding="7dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_top_10"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_type_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="#10"
                android:textAllCaps="false"
                ></Button>
            <Button
                android:id="@+id/btn_food"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_type_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/food"
                android:textAllCaps="false"
                ></Button>

            <Button
                android:id="@+id/btn_hotel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_type_2"
                android:text="@string/hotel"
                android:textAllCaps="false"></Button>

            <Button
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/btn_community"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_type_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/community"
                android:textAllCaps="false"
                ></Button>

            <Button
                android:id="@+id/btn_tip"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_type_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tips"
                android:textAllCaps="false"
                ></Button>
            <Button
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/btn_exp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_type_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/exp"
                android:textAllCaps="false"
                ></Button>

        </LinearLayout>

    </HorizontalScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ListView
            android:id="@+id/listContent"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@id/bottomLine">
        </ListView>
        <View
            android:id="@+id/bottomLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_alignTop="@id/bottomBar"
            ></View>
        <LinearLayout
            android:id="@+id/bottomBar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_alignParentBottom="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="5"
                >
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    >

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    >
                    <Button
                        android:id="@+id/btn_home"
                        android:background="@drawable/icon_home_3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        ></Button>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hola"
                        android:textAlignment="center"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    >
                    <Button
                        android:id="@+id/btn_upload"
                        android:background="@drawable/icon_update_4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        ></Button>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_2"
                        android:textAlignment="center"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    >
                    <Button
                        android:id="@+id/btn_your_review"
                        android:background="@drawable/icon_book_2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        ></Button>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_post"
                        android:textAlignment="center"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    >

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>